
- Tweaked the plot crosshairs to draw faster and y axis duplication if possible.

- Moved the plugin management functions into Config class. Changed the plugins to stay opened and available
  instead of opening and closing all the time. Better speed. Maybe OSX will work with this arrangement.
  Added a Plugin::clearOutput() function to minimize memory use with open plugins.
  
  
0.22
====

- Added MA options to the VOL, OI indicator plugins.

- Updated the date area of charts to include more detail.

- Fixed compile error in the /src/src.pro file that didn't compile QuotePlugin and IndicatorPlugin classes.

- Added a new side panel to allow the user to enable/disable main chart indicators on the fly.
  Double click on the indicator in the list to enable or disable the indicator.

- Added 0% line option to fibo chart object.

- Added DTOHLC format option to the CSV plugin.

- Added toolbar toggle to hide/show the main OHLC plot. Use this to clarify other close based indicators
  on the chart.
  
- Added new indicator PRICE. This allows you to plot a number of different price plot formulas.

- Applied patch #816926 - BB indicator not showing BBU value.

- Applied patch #816927 - Added a new "Data Panel" doc. Further clarify the
candlesticks. Updated FAQ to encourage more contributions.

- Added an additional include path to all the plugins to help in compiling with older qmake versions. (Debian).

- Applied patch #816871 from Marco van Zwetselaar. This is a new quote plugin (MySQL) that allows the user to import quote data from
  MySQL db's into Qtstalker format. Added a function to the qtstalker.pro file to make a conditional compile of this plugin if the 
  mysql.h header file can be found. If not found, the plugin will not be compiled.

- Better resizing of columns when editing user settings in SettingView class.

- Fixed bug #819309 that caused a segfault with 'floating point error' on new tab indicator creation.
